@@ -1,3 +1,8 @@
+2010-10-05  Per Bothner  <per@bothner.com>
+
+	Fix Savannah 31250 "try/catch & endless loop".
+	* Scope.java (setStartPC): We don't want to set the reachable flag.
+
 2010-09-30  Per Bothner  <per@bothner.com>
 
 	* ClassType.java (compare): Special-case the care of comparing
